--- a/frap_book.tex
+++ b/frap_book.tex
@@ -75,7 +75,7 @@ The license text is available at:
 
 \chapter{Why Prove the Correctness of Programs?}
 
-The classic engineering disciplines all have their standard mathematical techniques that are applied to the design of any artifact, before it is deployed, to gain confidence abouts its safety, suitability for some purpose, and so on.
+The classic engineering disciplines all have their standard mathematical techniques that are applied to the design of any artifact, before it is deployed, to gain confidence about its safety, suitability for some purpose, and so on.
 The engineers in a discipline more or less agree on what are ``the rules'' to be followed in vetting a design.
 Those rules are specified with a high degree of rigor, so that it isn't a matter of opinion whether a design is safe.
 Why doesn't software engineering have a corresponding agreed-upon standard, whereby programmers convince themselves that their systems are safe, secure, and correct?
